--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: /
 <div id="page-home">
   <div class="heading">
     <div>
-      <img alt="lively wallpaper logo" src="{{ '/assets/logo.webp' | relative_url }}" width="125" class="logo" />
+      <img alt="lively wallpaper logo" src="{{ '/assets/images/logo.webp' | relative_url }}" width="125" class="logo" />
       <h1 style="margin-bottom: 0px; margin-top: 25px">{{ site.data.languages.en.home.title }}</h1>
       <h3 style="margin-bottom: 0px; margin-top: 10px">{{ site.data.languages.en.home.subtitle }}</h3>
       <p>
@@ -42,7 +42,7 @@ permalink: /
       <div class="ui-app-overlay"></div>
       <!-- <div class="down-arrow" onClick="scrollToElement('page-home');"></div> -->
       <div id="ui-app-titlebar">
-        <img alt="lively wallpaper logo" src="{{ '/assets/logo.webp' | relative_url }}" />
+        <img alt="lively wallpaper logo" src="{{ '/assets/images/logo.webp' | relative_url }}" />
         <a>Lively Wallpaper</a>
       </div>
       <div id="ui-app-titlebar-badge">
@@ -57,7 +57,7 @@ permalink: /
         </map>
         <img
           alt="microsoft store award 2023"
-          src="{{ '/assets/store_award_badge.webp' | relative_url }}"
+          src="{{ '/assets/images/store_award_badge.webp' | relative_url }}"
           width="155"
           usemap="#ms-store-award-map"
         />
@@ -71,7 +71,7 @@ permalink: /
         <li id="rain" class="library">
           <img
             alt="rain wallpaper"
-            src="{{ '/assets/rain_preview.webp' | relative_url }}"
+            src="{{ '/assets/images/rain_preview.webp' | relative_url }}"
             style="outline: 2.5px solid #a425a0"
             width="600"
             height="400"
@@ -81,19 +81,19 @@ permalink: /
         </li>
 
         <li id="snow" class="library">
-          <img alt="snow wallpaper" src="{{ '/assets/snow_preview.webp' | relative_url }}" width="600" height="400" draggable="false" />
+          <img alt="snow wallpaper" src="{{ '/assets/images/snow_preview.webp' | relative_url }}" width="600" height="400" draggable="false" />
           <div>Snow</div>
         </li>
 
         <li id="clouds" class="library">
-          <img alt="cloud wallpaper" src="{{ '/assets/clouds_preview.webp' | relative_url }}" width="600" height="400" draggable="false" />
+          <img alt="cloud wallpaper" src="{{ '/assets/images/clouds_preview.webp' | relative_url }}" width="600" height="400" draggable="false" />
           <div>Clouds</div>
         </li>
 
         <li id="synthwave" class="library">
           <img
             alt="synthwave wallpaper"
-            src="{{ '/assets/synthwave_preview.webp' | relative_url }}"
+            src="{{ '/assets/images/synthwave_preview.webp' | relative_url }}"
             width="600"
             height="400"
             draggable="false"
@@ -356,25 +356,25 @@ permalink: /
   <p>{{ site.data.languages.en.features.subtitle }}</p>
   <ul class="cards">
     <li class="card" id="feature-card-1">
-      <img alt="github" src="{{ '/assets/icons/github.svg' | relative_url }}" class="white-filter" />
+      <img alt="github" src="{{ '/assets/images/icons/github.svg' | relative_url }}" class="white-filter" />
       <div>{{ site.data.languages.en.features.open_source.title }}</div>
       <p>{{ site.data.languages.en.features.open_source.description }}</p>
     </li>
 
     <li class="card" id="feature-card-2">
-      <img alt="" src="{{ '/assets/icons/gauge-high.svg' | relative_url }}" class="white-filter" />
+      <img alt="" src="{{ '/assets/images/icons/gauge-high.svg' | relative_url }}" class="white-filter" />
       <div>{{ site.data.languages.en.features.performance.title }}</div>
       <p>{{ site.data.languages.en.features.performance.description }}</p>
     </li>
 
     <li class="card" id="feature-card-3">
-      <img alt="" src="{{ '/assets/icons/rocket.svg' | relative_url }}" class="white-filter" />
+      <img alt="" src="{{ '/assets/images/icons/rocket.svg' | relative_url }}" class="white-filter" />
       <div>{{ site.data.languages.en.features.modern.title }}</div>
       <p>{{ site.data.languages.en.features.modern.description }}</p>
     </li>
 
     <li class="card" id="feature-card-4">
-      <img alt="" src="{{ '/assets/icons/toolbox.svg' | relative_url }}" class="white-filter" />
+      <img alt="" src="{{ '/assets/images/icons/toolbox.svg' | relative_url }}" class="white-filter" />
       <div>{{ site.data.languages.en.features.tools.title }}</div>
       <p>{{ site.data.languages.en.features.tools.description }}</p>
     </li>
@@ -393,11 +393,11 @@ permalink: /
   <p>{{ site.data.languages.en.gallery.subtitle }}</p>
   <div class="gallery-container">
     <div class="gallery-wrap">
-      <div class="item item-1" data-delayedsrc="url({{ '/assets/promo/gallery1.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.fluid }}</p></div>
-      <div class="item item-2" data-delayedsrc="url({{ '/assets/promo/gallery2.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.music }}</p></div>
-      <div class="item item-3" data-delayedsrc="url({{ '/assets/promo/gallery3.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.wave }}</p></div>
-      <div class="item item-4" data-delayedsrc="url({{ '/assets/promo/gallery4.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.system }}</p></div>
-      <div class="item item-5" data-delayedsrc="url({{ '/assets/promo/gallery5.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.synthwave }}</p></div>
+      <div class="item item-1" data-delayedsrc="url({{ '/assets/images/promo/gallery1.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.fluid }}</p></div>
+      <div class="item item-2" data-delayedsrc="url({{ '/assets/images/promo/gallery2.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.music }}</p></div>
+      <div class="item item-3" data-delayedsrc="url({{ '/assets/images/promo/gallery3.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.wave }}</p></div>
+      <div class="item item-4" data-delayedsrc="url({{ '/assets/images/promo/gallery4.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.system }}</p></div>
+      <div class="item item-5" data-delayedsrc="url({{ '/assets/images/promo/gallery5.webp' | relative_url }})"><p>{{ site.data.languages.en.gallery.synthwave }}</p></div>
     </div>
   </div>
 </div>
@@ -419,7 +419,7 @@ permalink: /
         href="https://github.com/rocksdanister/lively/releases/download/v2.1.0.8/lively_setup_x86_full_v2108.exe"
       >
         <div class="download-wrapper">
-          <img alt="lively installer" src="{{ '/assets/icons/download.svg' | relative_url }}" class="white-filter" />
+          <img alt="lively installer" src="{{ '/assets/images/icons/download.svg' | relative_url }}" class="white-filter" />
           <div>
             <span>{{ site.data.languages.en.download.windows }}</span>
             <h1>{{ site.data.languages.en.download.installer }}</h1>
