--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ permalink: /
       <div class="ui-app-overlay"></div>
       <!-- <div class="down-arrow" onClick="scrollToElement('page-home');"></div> -->
       <div id="ui-app-titlebar">
-        <img alt="lively wallpaper logo" src="{{ '/assets/images/logo.webp' | relative_url }}" />
+        <img alt="lively wallpaper logo" src="{{ '//images/logo.webp' | relative_url }}" />
         <a>Lively Wallpaper</a>
       </div>
       <div id="ui-app-titlebar-badge">
@@ -57,7 +57,7 @@ permalink: /
         </map>
         <img
           alt="microsoft store award 2023"
-          src="{{ '/assets/images/store_award_badge.webp' | relative_url }}"
+          src="{{ '//images/store_award_badge.webp' | relative_url }}"
           width="155"
           usemap="#ms-store-award-map"
         />
@@ -66,7 +66,7 @@ permalink: /
         <div class="ui-app-body-top"></div>
         <div class="ui-app-body-main"></div>
       </div>
-      <!-- <img src="assets/app.webp" class="ui-app-img" draggable="false" /> -->
+      <!-- <img src="assets/images/app.webp" class="ui-app-img" draggable="false" /> -->
       <ul id="wallpapers" class="wallpapers">
         <li id="rain" class="library">
           <img
@@ -110,7 +110,7 @@ permalink: /
         <h3 style="margin-top: 10px">{{ site.data.languages.en.magic.subtitle }}</h3>
       </div>
       <div class="ui-app-dialog"></div>
-      <!-- <img src="assets/app_dialog.webp" class="ui-app-dialog-img" draggable="false" /> -->
+      <!-- <img src="assets/images/app_dialog.webp" class="ui-app-dialog-img" draggable="false" /> -->
       <div id="ui-app-customise-controls">
         <div id="ui-app-customise-controls-test" style="display: none">
           <p class="slider-label">{{ site.data.languages.en.magic.size }}</p>
