--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ permalink: /
           <div class="dropdown">
             <button class="dropbtn">{{ site.data.languages.en.rain_controls.change_background }}</button>
             <div class="dropdown-content">
-              <a onclick="setTexture('u_tex0', 'media/rain_mountain.webp')">{{ site.data.languages.en.rain_controls.mountain }}</a>
-              <a onclick="setTexture('u_tex0', 'media/rain_forest.webp')">{{ site.data.languages.en.rain_controls.forest }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/rain_mountain.webp')">{{ site.data.languages.en.rain_controls.mountain }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/rain_forest.webp')">{{ site.data.languages.en.rain_controls.forest }}</a>
               <a onclick="openFilePicker()">{{ site.data.languages.en.rain_controls.custom }}</a>
             </div>
           </div>
@@ -233,8 +233,8 @@ permalink: /
           <div class="dropdown">
             <button class="dropbtn">{{ site.data.languages.en.snow_controls.change_background }}</button>
             <div class="dropdown-content">
-              <a onclick="setTexture('u_tex0', 'media/snow_tree.webp')">{{ site.data.languages.en.snow_controls.trees }}</a>
-              <a onclick="setTexture('u_tex0', 'media/snow_landscape.webp')">{{ site.data.languages.en.snow_controls.landscape }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/snow_tree.webp')">{{ site.data.languages.en.snow_controls.trees }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/snow_landscape.webp')">{{ site.data.languages.en.snow_controls.landscape }}</a>
               <a onclick="openFilePicker()">{{ site.data.languages.en.snow_controls.custom }}</a>
             </div>
           </div>
