--- a/it.html
+++ b/it.html
@@ -66,7 +66,7 @@ permalink: /it/
         <div class="ui-app-body-top"></div>
         <div class="ui-app-body-main"></div>
       </div>
-      <!-- <img src="assets/app.webp" class="ui-app-img" draggable="false" /> -->
+      <!-- <img src="/assets/images/app.webp" class="ui-app-img" draggable="false" /> -->
       <ul id="wallpapers" class="wallpapers">
         <li id="rain" class="library">
           <img
@@ -110,7 +110,7 @@ permalink: /it/
         <h3 style="margin-top: 10px">{{ site.data.languages.it.magic.subtitle }}</h3>
       </div>
       <div class="ui-app-dialog"></div>
-      <!-- <img src="assets/images/app_dialog.webp" class="ui-app-dialog-img" draggable="false" /> -->
+      <!-- <img src="/assets/images/app_dialog.webp" class="ui-app-dialog-img" draggable="false" /> -->
       <div id="ui-app-customise-controls">
         <div id="ui-app-customise-controls-test" style="display: none">
           <p class="slider-label">{{ site.data.languages.it.magic.size }}</p>
@@ -179,8 +179,8 @@ permalink: /it/
           <div class="dropdown">
             <button class="dropbtn">{{ site.data.languages.it.rain_controls.change_background }}</button>
             <div class="dropdown-content">
-              <a onclick="setTexture('u_tex0', 'media/rain_mountain.webp')">{{ site.data.languages.it.rain_controls.mountain }}</a>
-              <a onclick="setTexture('u_tex0', 'media/rain_forest.webp')">{{ site.data.languages.it.rain_controls.forest }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/rain_mountain.webp')">{{ site.data.languages.it.rain_controls.mountain }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/rain_forest.webp')">{{ site.data.languages.it.rain_controls.forest }}</a>
               <a onclick="openFilePicker()">{{ site.data.languages.it.rain_controls.custom }}</a>
             </div>
           </div>
@@ -233,8 +233,8 @@ permalink: /it/
           <div class="dropdown">
             <button class="dropbtn">{{ site.data.languages.it.snow_controls.change_background }}</button>
             <div class="dropdown-content">
-              <a onclick="setTexture('u_tex0', 'media/snow_tree.webp')">{{ site.data.languages.it.snow_controls.trees }}</a>
-              <a onclick="setTexture('u_tex0', 'media/snow_landscape.webp')">{{ site.data.languages.it.snow_controls.landscape }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/snow_tree.webp')">{{ site.data.languages.it.snow_controls.trees }}</a>
+              <a onclick="setTexture('u_tex0', 'assets/media/snow_landscape.webp')">{{ site.data.languages.it.snow_controls.landscape }}</a>
               <a onclick="openFilePicker()">{{ site.data.languages.it.snow_controls.custom }}</a>
             </div>
           </div>
